--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
   "name": "flash-bot-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "web3/index.js",
-  "scripts": {
-    "start": "node web3/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Crypto-Pioneers/flash-bot-server.git"
-  },
-  "keywords": [
-    "flash-bot",
-    "blockchain"
-  ],
-  "author": "crypto-pioneer",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Crypto-Pioneers/flash-bot-server/issues"
-  },
-  "homepage": "https://github.com/Crypto-Pioneers/flash-bot-server#readme",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bignumber.js": "^9.1.2",
-    "dotenv": "^16.4.5",
-    "log4js": "^6.9.1",
-    "web3": "^4.8.0"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
