--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "async-request": "^1.2.0",
+    "bignumber.js": "^9.0.1",
+    "dotenv": "^8.2.0",
+    "dotnet": "^1.1.4",
+    "ether": "^0.0.9",
+    "log4js": "^6.4.4",
+    "path-browserify": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
