--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "async-request": "^1.2.0",
-    "bignumber.js": "^9.0.1",
-    "dotenv": "^8.2.0",
-    "dotnet": "^1.1.4",
-    "ether": "^0.0.9",
-    "log4js": "^6.4.4",
-    "path-browserify": "^1.0.1",
+    "axios": "^1.6.8",
+    "net": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "web3": "^1.3.4"
+    "web3": "^4.8.0",
+    "websocket": "^1.0.35",
+    "ws": "^8.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "optionalDependencies": {
+    "utf-8-validate": "^5.0.10"
   }
 }
