--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "async-request": "^1.2.0",
     "axios": "^1.6.8",
+    "bignumber.js": "^9.1.2",
     "net": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
