--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bignumber.js": "^9.1.2",
+    "moment": "^2.30.1",
     "net": "^1.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "web3": "^4.8.0",
